# talos_description

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  talos.rviz
launch/: talos_rviz.launch  talos_upload.launch  talos_upload_gazebo.launch
meshes/: elbow_bracket_link.stl  movable_claw_link.stl  shoulder_link.stl  upper_arm_link.stl
meshes/arm/: elbow_block_link.stl  elbow_bracket_link.stl  lower_arm with wrist.stl  lower_arm_link.stl  shoulder_link.stl  wrist_link.stl
meshes/gripper/: gripper_base_link.stl  stationary_claw_link.stl
meshes/head/: pan_neck.stl  stationary_neck.stl  tilt_head.stl
meshes/torso/: torso_link.stl
meshes/wheel/: back_wheel.stl  caster.stl  caster_wheel.stl
plugins/: mimic_plugin  mimic_plugin.cpp  mimic_plugin.h
robot/: frames.gv  robot.gazebo.xacro  robot.urdf  robot.urdf.xacro
urdf/: constants.xacro  inertial_template.urdf.xacro  materials.urdf.xacro  robot.urdf  robot.urdf.xacro  robot.urdf.xacro~  rviztest.urdf~
urdf/arm/: arm.transmission.xacro  arm.urdf.xacro
urdf/base/: base.urdf.xacro
urdf/gripper/: gripper.transmission.xacro  gripper.urdf.xacro
urdf/head/: head.stl  head.transmission.xacro  head.urdf.xacro  neck.stl
urdf/sensors/: hokuyo.gazebo.xacro  hokuyo.urdf.xacro  kinect.dae  kinect.gazebo.xacro  kinect.urdf.xacro  sensors.urdf.xacro
urdf/torso/: torso.transmission.xacro  torso.urdf.xacro
urdf/wheel/: back_wheel.transmission.xacro  back_wheel.urdf.xacro  caster_wheel.transmission.xacro  caster_wheel.urdf.xacro  wheel.stl  wheel.transmission.xacro  wheel.urdf.xacro
